<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">Zen Pets</string>
    <string name="google_static_map_api_key">AIzaSyD-5QWNIgI2O0F6JmmrGZyKUHUPb_YePkw</string>
    <string name="google_directions_api_key">AIzaSyArMfGlHiyPFZoF_o0u7I80LVKQK45NWbA</string>
    <string name="default_notification_channel_id">USERS_DEFAULT_CHANNEL</string>
    <string name="default_notification_channel_name">USERS_DEFAULT_CHANNEL</string>
    <string name="default_notification_channel_desc">USERS_DEFAULT_CHANNEL</string>
    <string name="common_loading">Loading....</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="new_landing_empty_doctors">No doctors found near you. Click <b>\"See more doctors\"</b> to expand your location…</string>
    <string name="new_landing_empty_adoptions">Oh snap. There are no adoptions listed in your city. :-(</string>
    <string name="generic_mb_yes">Yes</string>
    <string name="generic_mb_no">No</string>
    <string name="generic_tilde">~</string>
    <string name="generic_infinity">∞</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_details">Details</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_new">New</string>
    <string name="menu_apply">Apply</string>
    <string name="menu_attach">Submit</string>
    <string name="menu_submit">Submit</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_book">Book</string>
    <string name="menu_call">Call</string>
    <string name="menu_enquire">Enquire</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_home">Home</string>
    <string name="menu_read">Read</string>
    <string name="menu_consult">Consult</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_adoption_details">Details</string>
    <string name="menu_adoption_status">Change Status</string>
    <string name="menu_adoption_promote">Promote Listing</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_question">Q &amp; A</string>
    <string name="storage_permission_title">We Need A Permission</string>
    <string name="storage_permission_message">\nZen Pets requires the Storage Permission to optimize Images that you upload to the Zen Pets platform.</string>
    <string name="location_permission_title">We Need Your Location</string>
    <string name="location_permission_message">\nZen Pets requires the Location Permission to show you the appropriate listings near / at your location. \n\nFor a seamless experience, we recommend granting Zen Pets this permission.</string>
    <string name="doctor_location_denied_title">Permission denied…</string>
    <string name="doctor_location_denied_message">For finding Doctors near you, Zen Pets requires the Location permission.
        \n\n
        Without this permission being granted, we wouldn\'t be able to show you Doctors closest to you.
        \n\n
        Would you like to grant this permission? Click the \"GRANT PERMISSION\" button. If not, click the \"NEVERMIND\" button</string>
    <string name="adoption_location_denied_message">For finding Adoptions in your City, Zen Pets requires the Location permission.
        \n\n
        Without this permission being granted, we won\'t be able to show you Adoptions in your City.
        \n\n
        Would you like to grant this permission? Click the \"GRANT PERMISSION\" button. If not, click the \"NEVERMIND\" button</string>
    <string name="permission_grant">Grant Permission</string>
    <string name="permission_deny">Not Now</string>
    <string name="permission_nevermind">Nevermind</string>
    <string name="splash_title">ZEN PETS</string>
    <string name="login_social_message">Login using your social account</string>
    <string name="profile_editor_display_name">Display Name</string>
    <string name="profile_editor_email">Email Address</string>
    <string name="profile_editor_prefix">1234</string>
    <string name="profile_editor_phone">Phone Number</string>
    <string name="profile_editor_country">Select your Country</string>
    <string name="profile_editor_state">Select your State</string>
    <string name="profile_editor_city">Select the City</string>
    <string name="profile_editor_male">MALE</string>
    <string name="profile_editor_female">FEMALE</string>
    <string name="home_title_appointment">Find Veterinarians</string>
    <string name="home_subtitle_appointment">Find vets, pet clinics and more</string>
    <string name="home_title_adopt">Adopt A Pet</string>
    <string name="home_subtitle_adopt">Adopt a new best friend</string>
    <string name="home_title_groomers">Groomers</string>
    <string name="home_subtitle_groomers">Bathe your pet in luxury</string>
    <string name="home_title_kennels">Pet Kennels</string>
    <string name="home_subtitle_kennels">For the globetrotting pet parents</string>
    <string name="home_subtitle_kennels_alternate">For the globetrotting pet parents</string>
    <string name="home_title_boarding">Home Boarding</string>
    <string name="home_subtitle_boarding">For your pets, a home away from home.</string>
    <string name="home_title_trainers">Trainers</string>
    <string name="home_subtitle_trainers">Train your best, with the best…</string>
    <string name="question_details_title">Consultation Title</string>
    <string name="question_details_description">Consultation Description</string>
    <string name="question_details_asked_for">Consultation Asked For</string>
    <string name="question_details_time_stamp">Timestamp</string>
    <string name="question_details_views">0 Views</string>
    <string name="question_details_replies">0 Replies</string>
    <string name="question_details_answers_label">Answers</string>
    <string name="question_details_answers_empty">There are no answers on this question yet…</string>
    <string name="question_details_asked_for_placeholder">Asked for %1$s %2$s %3$s</string>
    <string name="question_details_views_placeholder">%1$s Views</string>
    <string name="question_details_replies_placeholder">%1$s Replies</string>
    <string name="question_details_location_placeholder">%1$s, %2$s</string>
    <string name="question_details_votes_placeholder">%1$s / %2$s found this helpful</string>
    <string name="reply_item_doc_name">Doctor\'s Name</string>
    <string name="reply_item_doc_location">Doctor\'s Location</string>
    <string name="reply_item_time_stamp">Timestamp</string>
    <string name="reply_item_reply">Consultation Reply</string>
    <string name="reply_item_helpful_count">0 / 0 found this helpful</string>
    <string name="reply_item_helpful_label">Was this answer helpful?</string>
    <string name="reply_item_helpful_yes">YES</string>
    <string name="reply_item_helpful_no">NO</string>
    <string name="questions_list_filter_label">Filter questions</string>
    <string name="questions_list_empty">There are no Consultation questions on this topic yet…</string>
    <string name="questions_list_ask_question">Tap to ask free question</string>
    <string name="question_item_title">Consultation Title</string>
    <string name="question_item_description">Consultation Description</string>
    <string name="question_item_time_stamp">Timestamp</string>
    <string name="question_item_views">0 Views</string>
    <string name="profile_user_name">USER NAME</string>
    <string name="profile_view_profile">VIEW PROFILE</string>
    <string name="profile_my_pets">My Pets</string>
    <string name="profile_my_appointments">My Appointments</string>
    <string name="profile_my_consultations">My Consultations</string>
    <string name="profile_my_adoptions">My Adoption Listings</string>
    <string name="profile_home_boarding">Home Boarding</string>
    <string name="profile_settings_out">Settings</string>
    <string name="settings_notifications_label">NOTIFICATIONS</string>
    <string name="settings_notifications_sub_text">Manage your notifications. Check a box to subscribe to a channel, or uncheck a box to unsubscribe from a channel.</string>
    <string name="settings_adoption_label">Subscribe to Adoptions</string>
    <string name="settings_adoption_sub_text">To get a notification every time a new Adoption listing is published on Zen Pets. Only listings from your City will be displayed.</string>
    <string name="settings_notification_note"><b>NOTE:</b> You cannot opt-out of Notifications when you post an Adoption Listing or participate on an Adoption Listing. Similarly, you cannot opt-out of notifications when you initiate a Consultation or enquire with a Trainer.</string>
    <string name="settings_sign_out">SIGN OUT</string>
    <string name="sponsored_clinic_name">CLINIC NAME</string>
    <string name="sponsored_clinic_address">CLINIC ADDRESS</string>
    <string name="sponsored_clinic_charges">₹ 200</string>
    <string name="sponsored_clinic_reviews">29 reviews</string>
    <string name="sponsored_clinic_distance">~ 1.1 km</string>
    <string name="sponsored_clinic_sponsored_title">SPONSORED</string>
    <string name="sponsored_clinic_address_placeholder">%1$s, %2$s</string>
    <string name="sponsored_clinic_distance_km">km</string>
    <string name="sponsored_clinic_distance_placeholder">%1$s %2$s %3$s</string>
    <string name="doctor_list_tb_title">Find &amp; Book</string>
    <string name="doctor_list_tb_location_title">LOCATION</string>
    <string name="doctor_list_tb_location">Locality, City</string>
    <string name="doctor_list_empty_message">We could not find any Doctors near you. Try changing your location…</string>
    <string name="doctor_list_location_not_served">We currently do not serve this City. but fear not. We will have you covered shortly.</string>
    <string name="doctor_list_tb_location_placeholder">%1$s, %2$s</string>
    <string name="doctor_list_clinic_distance_placeholder">%1$s %2$s</string>
    <string name="doctor_list_doctor_experience_text">yrs exp</string>
    <string name="doctor_list_doctor_experience_placeholder">%1$s %2$s</string>
    <string name="doctor_list_votes_percent_text">0 %</string>
    <string name="doctor_list_votes_text">0 votes</string>
    <string name="doctor_list_votes_open">(</string>
    <string name="doctor_list_votes_close">)</string>
    <string name="doctor_list_votes_placeholder">%1$s %2$s%3$s%4$s</string>
    <string name="doctor_list_address_placeholder">%1$s, %2$s - %3$s</string>
    <string name="doctor_item_doc_name">DOCTOR NAME</string>
    <string name="doctor_item_likes_percent">100%</string>
    <string name="review_creator_doc_name">DOCTOR NAME</string>
    <string name="review_creator_recommend_label">Would you recommend the doctor to your family and friends?</string>
    <string name="review_creator_recommend_yes">Yes</string>
    <string name="review_creator_recommend_no">No</string>
    <string name="review_creator_time_title">Did your appointment start on time?</string>
    <string name="review_creator_time_on_time">On-time</string>
    <string name="review_creator_time_10_mins">10 mins late</string>
    <string name="review_creator_time_30_mins">30 mins late</string>
    <string name="review_creator_time_hour_late"> <b>></b> 1 hour late</string>
    <string name="review_creator_rating_label">Your overall experience at the clinic</string>
    <string name="review_creator_problem_label">What was the purpose of your visit?</string>
    <string name="review_creator_experience_label">How was your experience with the Doctor?</string>
    <string name="review_creator_terms">By submitting the review, I agree to the Terms &amp; Conditions</string>
</resources>