<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuDashMenu"
        android:enabled="true"
        android:icon="@drawable/bottom_menu_dark"
        android:title="@string/menu_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuDashQuestion"
        android:enabled="true"
        android:icon="@drawable/bottom_question_dark"
        android:title="@string/menu_question"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuHomeFragment"
        android:enabled="true"
        android:icon="@drawable/bottom_home_dark"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuReadFragment"
        android:enabled="true"
        android:icon="@drawable/bottom_read_dark"
        android:title="@string/menu_read"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuProfileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_person_white_24dp"
        android:title=""
        app:showAsAction="ifRoom" />
</menu>