<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuHomeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_action_home_dark"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuQuestionFragment"
        android:enabled="true"
        android:icon="@drawable/ic_consult_dark"
        android:title="@string/menu_consult"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuProfileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_action_user_dark"
        android:title="@string/menu_profile"
        app:showAsAction="ifRoom" />
</menu>