<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menuBook"
        android:icon="@drawable/ic_doctor_book_dark"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/menu_book"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/menuCall"
        android:icon="@drawable/ic_doctor_call_dark"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/menu_call"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/menuFeedback"
        android:icon="@drawable/ic_doctor_rate_dark"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/menu_rate"
        tools:ignore="AppCompatResource" />
</menu>