<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/zen_toolbar" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtNotificationsLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/settings_notifications_label"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                app:fontFamily="@font/roboto_condensed_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtNotificationsSubtext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/settings_notifications_sub_text"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"
                app:fontFamily="@font/roboto_condensed_regular"
                app:layout_constraintEnd_toEndOf="@+id/txtNotificationsLabel"
                app:layout_constraintStart_toStartOf="@+id/txtNotificationsLabel"
                app:layout_constraintTop_toBottomOf="@+id/txtNotificationsLabel" />

            <LinearLayout
                android:id="@+id/linlaAdoptions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/txtNotificationsSubtext"
                app:layout_constraintStart_toStartOf="@+id/txtNotificationsSubtext"
                app:layout_constraintTop_toBottomOf="@+id/txtNotificationsSubtext">

                <TextView
                    android:id="@+id/txtAdoption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_condensed_bold"
                    android:paddingBottom="5dp"
                    android:paddingEnd="11dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="11dp"
                    android:paddingStart="0dp"
                    android:paddingTop="5dp"
                    android:text="@string/settings_adoption_label"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/chkbxAdoptions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtAdoptionLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_regular"
                android:paddingBottom="5dp"
                android:paddingEnd="11dp"
                android:paddingLeft="0dp"
                android:paddingRight="11dp"
                android:paddingStart="0dp"
                android:paddingTop="5dp"
                android:text="@string/settings_adoption_sub_text"
                android:textColor="@color/secondary_text"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="@+id/linlaAdoptions"
                app:layout_constraintStart_toStartOf="@+id/linlaAdoptions"
                app:layout_constraintTop_toBottomOf="@+id/linlaAdoptions" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>